--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
           </dl>
 
           <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
-            <dd class="mid-gray f6 f5-l b ml0">Breathe</dd>
+            <dd class="mid-gray f6 f5-l b ml0">Breathing</dd>
             <dd class="dark-gray f3 f2-l b ml0">Sometimes</dd>
           </dl>
 
