--- a/errant.html
+++ b/errant.html
@@ -25,7 +25,7 @@
     <div class="dtc v-mid w-75 w-60-ns tr">
       <a class="link dark-gray hover-orange ttu tracked f6 f5-l fw7 sans-serif dib mr3 mr4-ns" href="work.html" title="Work">Work</a>
       <a class="link dark-gray hover-orange ttu tracked f6 f5-l fw7 sans-serif dib mr3 mr4-ns" href="about.html" title="About">About</a>
-      <a class="link dark-gray hover-orange ttu tracked f6 f5-l fw7 sans-serif dib" href="microcitylibrary.html#contact" title="Contact">Contact</a>
+      <a class="link dark-gray hover-orange ttu tracked f6 f5-l fw7 sans-serif dib" href="errant.html#contact" title="Contact">Contact</a>
     </div>
   </nav>
 
