--- a/exchange.html
+++ b/exchange.html
@@ -64,7 +64,7 @@
           The first half of the design studio I was a part of at the Aarhus School of Architecture was a material exploration exercise. This was the first experience during my architectural degree of understanding the properties of a material through hands-on use. We were introduced to LECA, a light-weight expanded clay aggregate. These round 'nuts' consist of 85% air due to the expansion process producing a honeycomb structure inside the nut. This gives them incredibly useful properties such as improved insulation, both thermally and auditory, and increased strength.
         </p>
 
-        <iframe src="https://drive.google.com/file/d/1ZRUZhh-ciWqjpIlQON1CTCtdL22XpPjc/preview" class="h-100" frameborder="0" allowfullscreen></iframe>
+        <iframe class="h-100" src="https://drive.google.com/file/d/1ZRUZhh-ciWqjpIlQON1CTCtdL22XpPjc/preview" frameborder="0" allowfullscreen></iframe>
 
         <p class="f5 fw6 ttu tracked fs-normal pt3">Conceptual Project</p>
         <p class="f5 lh-copy measure">
