--- a/microcitylibrary.html
+++ b/microcitylibrary.html
@@ -174,7 +174,7 @@
 
     <img src="resources/library_axo.jpg" class="w-100 pt3 pb3" />
 
-  </div><
+  </div>
 
   <footer class="pv4 ph3 bg-dark-gray">
     <a name="contact"></a>
