--- a/microcitylibrary.html
+++ b/microcitylibrary.html
@@ -66,7 +66,7 @@
           The site of this project was at Railway Square in Sydney, neither a railway nor a square. Using the site and the knowledge of the City of Sydney public transport infrastructure developments, we laid out a grid to create a field condition for our library. This field condition would be warped and manipulated by thoroughfare and public transportation routes, but retain a consistent gridded language to allow it to be read as a whole.<br><br>
         </p>
 
-        <iframe src="https://drive.google.com/file/d/0BzYOQEBbOMzkczQ1MjRBOU1rdWc/preview" class="h-100" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://drive.google.com/file/d/0BzYOQEBbOMzkczQ1MjRBOU1rdWc/preview" frameborder="0" allowfullscreen></iframe>
 
       </div>
 
