--- a/exchange.html
+++ b/exchange.html
@@ -60,18 +60,18 @@
       </header>
 
       <div class="fn fl-ns w-50-ns pt3 pt0-ns">
-        <p class="f5 lh-copy measure">
+        <p class="f5 lh-copy measure mt0-ns">
           The first half of the design studio I was a part of at the Aarhus School of Architecture was a material exploration exercise. This was the first experience during my architectural degree of understanding the properties of a material through hands-on use. We were introduced to LECA, a light-weight expanded clay aggregate. These round 'nuts' consist of 85% air due to the expansion process producing a honeycomb structure inside the nut. This gives them incredibly useful properties such as improved insulation, both thermally and auditory, and increased strength.
         </p>
 
         <iframe src="https://drive.google.com/file/d/1ZRUZhh-ciWqjpIlQON1CTCtdL22XpPjc/preview" frameborder="0" allowfullscreen></iframe>
 
         <p class="f5 fw6 ttu tracked fs-normal pt3">Conceptual Project</p>
-        <p class="f5 lh-copy measure">
+        <p class="f5 lh-copy measure mt0-ns">
           The second half of the studio was a project brief creating a space for reflection in an area called the Godsbanen. People express themselves in different ways especially when reflecting and I wanted to create an environment that manifests these reflections, enhances these experiences for the reflectee but also observers and that is adaptable to the users needs.<br><br>
           The architecture consisted of modular components with footprints of 10m by 10m and varying heights depending on the services it needed to connect. Each module consisted of hydraulic pumps to shift the floorplates, adjustable ceiling plates via a pulley system, and a retractable wall system. They floorplates also were shaped so that they could align with another floorplate without having a gap that people could fall through. Strung together over a large area, these components created a dynamic landscape through its monolithic presence.
         </p>
-        
+
       </div>
     </article>
 
