--- a/finwit.html
+++ b/finwit.html
@@ -66,6 +66,9 @@
           Through testing at three schools we already have keen interest from students and teachers alike. Creating additional content packs, especially syllabus related content presents an opportunity for the development board game to continue.<br><br>
           We are currently researching manufacturing costs and receiving quotes from companies both in Australia and abroad. Keep an eye out, FinWit might be hitting a school near you soon.
         </p>
+
+        <iframe src="https://drive.google.com/file/d/0B0SieSZcRt3rek1fX2VXTnhhc1k/preview" frameborder="0" allowfullscreen></iframe>
+        
       </div>
     </article>
 
