--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
           Architectural Designer &#8226 Model Maker &#8226 Transdisciplinary Innovator
         </h2>
 
-        <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">I studied a Bachelor of Design in Architecture and Bachelor of Creative Intelligence and Innovation at the University of Technology, Sydney. I have experience using laser cutters, CNC machines, woodworking machinery, 3D modelling software, and the Adobe Creative Suite. I have begun to learn front-end design and built this portfolio.</p>
+        <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">I completed a Bachelor of Design in Architecture and Bachelor of Creative Intelligence and Innovation at the University of Technology, Sydney. I have experience using laser cutters, CNC machines, woodworking machinery, 3D modelling software, and the Adobe Creative Suite. I have begun to learn front-end design which led to me building this portfolio.</p>
 
         <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">To me, being an architect is not simply about your ability to design buildings. It's about having an acute spatial awareness, being able to visualise in three-dimensions and to choreograph human movement through physical structures and space. It's about understanding who we are designing for, how things will be used, and most importantly, why.</p>    
 
