--- a/errant.html
+++ b/errant.html
@@ -43,7 +43,7 @@
         </h2>
         <time class="f6 ttu tracked gray">Errant-Labs + The Prolix Post, 2017</time>
         <div class="pt3">
-          <h4 class="f7 fw6 ttu tracked">Skills Employed</h4>
+          <h4 class="f7 fw6 ttu tracked">Skills Utilised</h4>
           <dl class="f7 lh-title mv2 bl bw1 b--light-purple">
             <dt class="dib ml0 pl3 b">Existing Outside Discipline</dt>
             <dd class="dib ml0 pl3 gray">Making use of the learnings from the Visual Communications elective I took, I was able to begin consult in areas outside of architecture.</dd>
