--- a/finwit.html
+++ b/finwit.html
@@ -43,7 +43,7 @@
         </h2>
         <time class="f6 ttu tracked gray">BCII Industry Capstone, 2017</time>
         <div class="pt3">
-          <h4 class="f7 fw6 ttu tracked">Skills Employed</h4>
+          <h4 class="f7 fw6 ttu tracked">Skills Utilised</h4>
           <dl class="f7 lh-title mv2 bl bw1 b--green">
             <dt class="dib ml0 pl3 b">Research & Implementation</dt>
             <dd class="dib ml0 pl3 gray">My ability to conduct research, gain relevant insights and then apply that knowledge was one of the reasons why I was asked to join this group.</dd>
