--- a/microcitylibrary.html
+++ b/microcitylibrary.html
@@ -43,7 +43,7 @@
         </h2>
         <time class="f6 ttu tracked gray">Design: Performance, 2015</time>
         <div class="pt3">
-          <h4 class="f7 fw6 ttu tracked">Skills Employed</h4>
+          <h4 class="f7 fw6 ttu tracked">Skills Utilised</h4>
           <dl class="f7 lh-title mv2 bl bw1 b--gold">
             <dt class="dib ml0 pl3 b">Teamwork / Collaboration</dt>
             <dd class="dib ml0 pl3 gray">A strong group of architecture students where we each played to our strengths.</dd>
