--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
     <div class="w-90 center pb4">
       <article class="w-90 center sans-serif">
-        <h3 class="f4 ttu tracked lh-title">My Skillset</h3>
+        <h3 class="f4 ttu tracked lh-title">What I Can Do</h3>
 
         <div class="cf">
 
