--- a/ftdiplatform.html
+++ b/ftdiplatform.html
@@ -43,7 +43,7 @@
         </h2>
         <time class="f6 ttu tracked gray">BCII Capstone, 2017</time>
         <div class="pt3">
-          <h4 class="f7 fw6 ttu tracked">Skills Employed</h4>
+          <h4 class="f7 fw6 ttu tracked">Skills Utilised</h4>
           <dl class="f7 lh-title mv2 bl bw1 b--orange">
             <dt class="dib ml0 pl3 b">Client Management</dt>
             <dd class="dib ml0 pl3 gray">We were in constant communication with our clients to ensure that both the design and operations of our project were meeting and exceeding their expectations.</dd>
