--- a/arteryschool.html
+++ b/arteryschool.html
@@ -43,7 +43,7 @@
         </h2>
         <time class="f6 ttu tracked gray">Design: Integration, 2016</time>
         <div class="pt3">
-          <h4 class="f7 fw6 ttu tracked">Skills Utilised</h4>
+          <h4 class="f7 fw6 ttu tracked">Strengths Utilised</h4>
           <dl class="f7 lh-title mv2 bl bw1 b--red">
             <dt class="dib ml0 pl3 b">Challenging Norms</dt>
             <dd class="dib ml0 pl3 gray">We took a very deliberate set of steps to push back against parts of the brief that would not have been time well spent and therefore were able to focus on creating exactly what we needed to convey our concept.</dd>
