--- a/legacy.html
+++ b/legacy.html
@@ -43,7 +43,7 @@
         </h2>
         <time class="f6 ttu tracked gray">BCII Elective Class, 2017</time>
         <div class="pt3">
-          <h4 class="f7 fw6 ttu tracked">Skills Utilised</h4>
+          <h4 class="f7 fw6 ttu tracked">Strengths Utilised</h4>
           <dl class="f7 lh-title mv2 bl bw1 b--blue">
             <dt class="dib ml0 pl3 b">Teaching</dt>
             <dd class="dib ml0 pl3 gray">I love sharing my knowlegde with others. Being a tutor has been something I've wanted to do since starting university and this was the perfect opportunity to start.</dd>
