--- a/exchange.html
+++ b/exchange.html
@@ -43,7 +43,7 @@
         </h2>
         <time class="f6 ttu tracked gray">Denmark, 2016</time>
         <div class="pt3">
-          <h4 class="f7 fw6 ttu tracked">Skills Utilised</h4>
+          <h4 class="f7 fw6 ttu tracked">Strengths Utilised</h4>
           <dl class="f7 lh-title mv2 bl bw1 b--light-pink">
             <dt class="dib ml0 pl3 b">Adaptability</dt>
             <dd class="dib ml0 pl3 gray">This was a whole new experience in a foreign country and I had to make the most of my educational and life experiences whilst over there.</dd>
