--- a/about.html
+++ b/about.html
@@ -62,6 +62,36 @@
         <div class="cf">
 
           <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
+            <dd class="mid-gray f6 f5-l b ml0">Design</dd>
+            <dd class="dark-gray f3 f2-l b ml0">Thinking</dd>
+          </dl>
+
+          <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
+            <dd class="mid-gray f6 f5-l b ml0">Transdisciplinary</dd>
+            <dd class="dark-gray f3 f2-l b ml0">Problem Solving</dd>
+          </dl>
+
+          <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
+            <dd class="mid-gray f6 f5-l b ml0">Creative</dd>
+            <dd class="dark-gray f3 f2-l b ml0">Methods</dd>
+          </dl>
+
+          <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
+            <dd class="mid-gray f6 f5-l b ml0">Strategy &</dd>
+            <dd class="dark-gray f3 f2-l b ml0">Execution</dd>
+          </dl>
+
+        </div>
+      </article>
+    </div>
+
+    <div class="w-90 center pb4">
+      <article class="w-90 center sans-serif">
+        <h3 class="f4 ttu tracked lh-title">My Skillset</h3>
+
+        <div class="cf">
+
+          <dl class="fl fn-l w-50 dib-l w-auto-l lh-title mr5-l">
             <dd class="mid-gray f6 f5-l b ml0">Rhinoceros 3D</dd>
             <dd class="dark-gray f3 f2-l b ml0">Advanced</dd>
           </dl>
