--- a/arteryschool.html
+++ b/arteryschool.html
@@ -43,10 +43,17 @@
         </h2>
         <time class="f6 ttu tracked gray">Design: Integration, 2016</time>
         <div class="pt3">
+          <h4 class="f7 fw6 ttu tracked">Awards</h4>
+          <dl class="f7 lh-title mv2 bl bw1 b--red">
+            <dt class="dib ml0 pl3 b">Steensen Varming Third Year Design Integration Prize</dt>
+            <dd class="dib ml0 pl3 gray">Jury Honourable Mention</dd>
+          </dl>
+        </div>
+        <div class="pt3">
           <h4 class="f7 fw6 ttu tracked">Strengths Utilised</h4>
           <dl class="f7 lh-title mv2 bl bw1 b--red">
             <dt class="dib ml0 pl3 b">Challenging Norms</dt>
-            <dd class="dib ml0 pl3 gray">We took a very deliberate set of steps to push back against parts of the brief that would not have been time well spent and therefore were able to focus on creating exactly what we needed to convey our concept.</dd>
+            <dd class="dib ml0 pl3 gray">We challenged the brief which allowed us to focus on creating more relevant and productive components to ensure that our project went beyond meeting the initial outcome.</dd>
           </dl>
           <dl class="f7 lh-title mv2 bl bw1 b--red">
             <dt class="dib ml0 pl3 b">Reliability</dt>
@@ -56,13 +63,13 @@
             <dt class="dib ml0 pl3 b">Humour</dt>
             <dd class="dib ml0 pl3 gray">To make the final semester of architecture enjoyable (and bearable), we added some humour to our manifesto, to our final drawing and in our final 'model within a model'.</dd>
           </dl>
-         </div>
+        </div>
       </header>
 
       <div class="fn fl-ns w-50-ns pt3 pt0-ns">
         <p class="f5 lh-copy measure mt0-ns">
           As an art high school, Eclectic Education and the Collaged College seeks to emphasize the importance of the artistic process as being as important as the final product itself. Taking such a stance leads to certain outcomes, namely being the creation of a series of buildings that differ dramatically in form, texture and spatial experience. Without the provision of dedicated exhibition spaces, the studio spaces in which students and resident artists work become the exhibition spaces. Furthermore, the connection of these differing buildings via the programmatically-constant ARTery, with its provision of both typical building services (water, HVAC, electricity) and atypical services (paint, ink, goods transport), allows the entire site to become a studio space for those who wish to see it that way.<br><br>
-          We realised that conducting the usual diagrammatic analysis of the site (public/private space, sight lines, thoroughfare, etc.) was not going to provide any rich or unique understanding of the site, so instead we put all our effort towards creating a manifesto. Displayed on a series of postcards, the captured the essence of what was to be our architecture and pedagogical stance on this visual arts high school.<br><br>
+          We realised that conducting the usual diagrammatic analysis of the site (public/private space, sight lines, thoroughfare, etc.) was not going to provide any rich or unique understanding of the site, so instead we put all our effort towards creating a manifesto. Displayed on a series of postcards, they captured the essence of what was to be our architecture and pedagogical stance on this visual arts high school.<br><br>
         </p>
 
       </div>
@@ -71,6 +78,58 @@
   </div>
 
   <div class="w-100 center">
+
+    <main class="cf w-100">
+      <div class="fl w-50 w-third-m w-25-ns">
+        <div class="aspect-ratio aspect-ratio--4x6">
+          <img style="background-image:url(resources/school_postcard1.jpg);"
+          class="db bg-center cover aspect-ratio--object" />
+        </div>
+      </div>
+      <div class="fl w-50 w-third-m w-25-ns">
+        <div class="aspect-ratio aspect-ratio--4x6">
+          <img style="background-image:url(resources/school_postcard2.jpg);"
+          class="db bg-center cover aspect-ratio--object" />
+        </div>
+      </div>
+      <div class="fl w-50 w-third-m w-25-ns">
+        <div class="aspect-ratio aspect-ratio--4x6">
+          <img style="background-image:url(resources/school_postcard3.jpg);"
+          class="db bg-center cover aspect-ratio--object" />
+        </div>
+      </div>
+      <div class="fl w-50 w-third-m w-25-ns">
+        <div class="aspect-ratio aspect-ratio--4x6">
+          <img style="background-image:url(resources/school_postcard4.jpg);"
+          class="db bg-center cover aspect-ratio--object" />
+        </div>
+      </div>
+      <div class="fl w-50 w-third-m w-25-ns">
+        <div class="aspect-ratio aspect-ratio--4x6">
+          <img style="background-image:url(resources/school_postcard5.jpg);"
+          class="db bg-center cover aspect-ratio--object" />
+        </div>
+      </div>
+      <div class="fl w-50 w-third-m w-25-ns">
+        <div class="aspect-ratio aspect-ratio--4x6">
+          <img style="background-image:url(resources/school_postcard6.jpg);"
+          class="db bg-center cover aspect-ratio--object" />
+        </div>
+      </div>
+      <div class="fl w-50 w-third-m w-25-ns">
+        <div class="aspect-ratio aspect-ratio--4x6">
+          <img style="background-image:url(resources/school_postcard7.jpg);"
+          class="db bg-center cover aspect-ratio--object" />
+        </div>
+      </div>
+      <div class="fl w-50 w-third-m w-25-ns">
+        <div class="aspect-ratio aspect-ratio--4x6">
+          <img style="background-image:url(resources/school_postcard8.jpg);"
+          class="db bg-center cover aspect-ratio--object" />
+        </div>
+      </div>
+    </main>
+
     <a name="marker" href="arteryschool.html#marker" style="background-image: url(resources/school_roof.jpg)"; class="link w-100 dt hide-child cover bg-center fn">
       <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
@@ -103,12 +162,15 @@
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">Full Model</h1>
           <div class="pa3 bt">
             <p class="f6 f5-ns lh-copy measure mv0">
-              1:100 (with in-process Site Model at 1:1000) - Cast cement, aluminium rods, 3D printed roof structure, laser cut acrylic infill, CNC milled foam (Site Model).
+              1:100 (with in-process Site Model at 1:1000)<br><br>Cast cement, aluminium rods, 3D printed roof structure, laser cut acrylic infill, CNC milled foam (Site Model).
             </p>
           </div>
         </article>
       </span>
     </a> 
+
+    <img src="resources/school_section1.png" class="w-50 fl" />
+    <img src="resources/school_section2.png" class="w-50" />
   </div>
 
   <footer class="pv4 ph3 bg-dark-gray">
