--- a/arteryschool.html
+++ b/arteryschool.html
@@ -4,7 +4,7 @@
 <head>
 
   <title>Eclectic Education and the Collaged College</title>
-  <meta name="description" content="Varun Mathew's Portfolio. BDes(Arch) BCII, UTS.">
+  <meta name="description" content="Varun Mathew BDes(Arch), BCII">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="styles.css">  
@@ -79,58 +79,58 @@
 
   <div class="w-100 center">
 
-    <main class="cf w-100">
+    <main class="cf w-100 ph4-ns pb3-ns ph0 pb0">
       <div class="fl w-50 w-third-m w-25-ns">
-        <div class="aspect-ratio aspect-ratio--4x6">
+        <div class="aspect-ratio aspect-ratio--5x7">
           <img style="background-image:url(resources/school_postcard1.jpg);"
           class="db bg-center cover aspect-ratio--object" />
         </div>
       </div>
       <div class="fl w-50 w-third-m w-25-ns">
-        <div class="aspect-ratio aspect-ratio--4x6">
+        <div class="aspect-ratio aspect-ratio--5x7">
           <img style="background-image:url(resources/school_postcard2.jpg);"
           class="db bg-center cover aspect-ratio--object" />
         </div>
       </div>
       <div class="fl w-50 w-third-m w-25-ns">
-        <div class="aspect-ratio aspect-ratio--4x6">
+        <div class="aspect-ratio aspect-ratio--5x7">
           <img style="background-image:url(resources/school_postcard3.jpg);"
           class="db bg-center cover aspect-ratio--object" />
         </div>
       </div>
       <div class="fl w-50 w-third-m w-25-ns">
-        <div class="aspect-ratio aspect-ratio--4x6">
+        <div class="aspect-ratio aspect-ratio--5x7">
           <img style="background-image:url(resources/school_postcard4.jpg);"
           class="db bg-center cover aspect-ratio--object" />
         </div>
       </div>
       <div class="fl w-50 w-third-m w-25-ns">
-        <div class="aspect-ratio aspect-ratio--4x6">
+        <div class="aspect-ratio aspect-ratio--5x7">
           <img style="background-image:url(resources/school_postcard5.jpg);"
           class="db bg-center cover aspect-ratio--object" />
         </div>
       </div>
       <div class="fl w-50 w-third-m w-25-ns">
-        <div class="aspect-ratio aspect-ratio--4x6">
+        <div class="aspect-ratio aspect-ratio--5x7">
           <img style="background-image:url(resources/school_postcard6.jpg);"
           class="db bg-center cover aspect-ratio--object" />
         </div>
       </div>
       <div class="fl w-50 w-third-m w-25-ns">
-        <div class="aspect-ratio aspect-ratio--4x6">
+        <div class="aspect-ratio aspect-ratio--5x7">
           <img style="background-image:url(resources/school_postcard7.jpg);"
           class="db bg-center cover aspect-ratio--object" />
         </div>
       </div>
       <div class="fl w-50 w-third-m w-25-ns">
-        <div class="aspect-ratio aspect-ratio--4x6">
+        <div class="aspect-ratio aspect-ratio--5x7">
           <img style="background-image:url(resources/school_postcard8.jpg);"
           class="db bg-center cover aspect-ratio--object" />
         </div>
       </div>
     </main>
 
-    <a name="marker" href="arteryschool.html#marker" style="background-image: url(resources/school_roof.jpg)"; class="link w-100 dt hide-child cover bg-center fn">
+    <a style="background-image: url(resources/school_roof.jpg); cursor: default;" class="link w-100 dt hide-child cover bg-center fn">
       <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">Model Roof</h1>
@@ -143,7 +143,7 @@
       </span>
     </a>
 
-    <a name="marker2" href="arteryschool.html#marker2" style="background-image: url(resources/school_foam.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fl">
+    <a style="background-image: url(resources/school_foam.jpg); cursor: default;" class="link w-100 w-50-ns dt hide-child cover bg-center fl">
       <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">Model Within a Model</h1>
@@ -156,7 +156,7 @@
       </span>
     </a> 
 
-    <a name="marker3" href="arteryschool.html#marker3" style="background-image: url(resources/school_model.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fn">
+    <a style="background-image: url(resources/school_model.jpg); cursor: default;" class="link w-100 w-50-ns dt hide-child cover bg-center fn">
       <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">Full Model</h1>
@@ -173,9 +173,8 @@
     <img src="resources/school_section2.png" class="w-50" />
   </div>
 
-  <footer class="pv4 ph3 bg-dark-gray">
-    <a name="contact"></a>
-    
+  <footer class="pv4 ph3 bg-dark-gray" id="contact">
+
     <div class="mw8 center tr">
       <a class="link silver hover-orange dib h2 w2 mr3" href="MAILTO:varun.mathew.95@gmail.com" title="Email">
         <svg fill="currentColor" viewBox="0 0 24 24" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414"><path d="M24 4.5v15c0 .85-.65 1.5-1.5 1.5H21V7.387l-9 6.463-9-6.463V21H1.5C.649 21 0 20.35 0 19.5v-15c0-.425.162-.8.431-1.068C.7 3.16 1.076 3 1.5 3H2l10 7.25L22 3h.5c.425 0 .8.162 1.069.432.27.268.431.643.431 1.068z"/></svg>
