--- a/egg.html
+++ b/egg.html
@@ -4,7 +4,7 @@
 <head>
 
   <title>._.</title>
-  <meta name="description" content="Varun Mathew's Portfolio. BDes(Arch) BCII, UTS.">
+  <meta name="description" content="Varun Mathew BDes(Arch), BCII">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="tachyons.css">
@@ -18,7 +18,7 @@
       <h1 class="f1 f-headline-l code mb3 fw9 dib tracked-tight black">thanks for having faith in my abilities</h1>
       <h2 class="black tc f1-l fw1">._.</h2>
   </header>
-  <a href="index.html" class="hover-yellow no-underline">
+  <a href="about.html" class="hover-yellow no-underline">
     <p class="black fw1 tc mt4 mt5-l f5 f4-l hover-yellow">
       <span style="cursor: wait">click here quickly to return</span>
     </p>
