--- a/legacy.html
+++ b/legacy.html
@@ -4,7 +4,7 @@
 <head>
 
   <title>Web Portfolio Elective</title>
-  <meta name="description" content="Varun Mathew's Portfolio. BDes(Arch) BCII, UTS.">
+  <meta name="description" content="Varun Mathew BDes(Arch), BCII">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="styles.css">
@@ -70,9 +70,8 @@
 
   </div>
 
-  <footer class="pv4 ph3 bg-dark-gray">
-    <a name="contact"></a>
-    
+  <footer class="pv4 ph3 bg-dark-gray" id="contact">
+
     <div class="mw8 center tr">
       <a class="link silver hover-orange dib h2 w2 mr3" href="MAILTO:varun.mathew.95@gmail.com" title="Email">
         <svg fill="currentColor" viewBox="0 0 24 24" fill-rule="evenodd" clip-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="1.414"><path d="M24 4.5v15c0 .85-.65 1.5-1.5 1.5H21V7.387l-9 6.463-9-6.463V21H1.5C.649 21 0 20.35 0 19.5v-15c0-.425.162-.8.431-1.068C.7 3.16 1.076 3 1.5 3H2l10 7.25L22 3h.5c.425 0 .8.162 1.069.432.27.268.431.643.431 1.068z"/></svg>
