--- a/microcitylibrary.html
+++ b/microcitylibrary.html
@@ -4,7 +4,7 @@
 <head>
 
   <title>Micro City Library</title>
-  <meta name="description" content="Varun Mathew's Portfolio. BDes(Arch) BCII, UTS.">
+  <meta name="description" content="Varun Mathew BDes(Arch), BCII">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="styles.css">
@@ -75,7 +75,7 @@
   </div>
 
   <div class="w-100 center">
-    <a name="marker" href="microcitylibrary.html#marker" style="background-image: url(resources/library_graphicnovel.jpg)"; class="link w-100 dt hide-child contain bg-center fn">
+    <a style="background-image: url(resources/library_graphicnovel.jpg); cursor: default;" class="link w-100 dt hide-child contain bg-center fn">
       <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">Graphic Narrative</h1>
@@ -88,7 +88,7 @@
       </span>
     </a>
 
-    <a name="marker2" href="microcitylibrary.html#marker2" style="background-image: url(resources/library_3.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fl">
+    <a style="background-image: url(resources/library_3.jpg); cursor: default;" class="link w-100 w-50-ns dt hide-child cover bg-center fl">
       <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">1:100 Model</h1>
@@ -101,7 +101,7 @@
       </span>
     </a>
 
-    <a name="marker3" href="microcitylibrary.html#marker3" style="background-image: url(resources/library_2.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fn">
+    <a style="background-image: url(resources/library_2.jpg); cursor: default;" class="link w-100 w-50-ns dt hide-child cover bg-center fn">
       <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">Protocol for Growth</h1>
@@ -114,7 +114,7 @@
       </span>
     </a>
 
-    <a name="marker4" href="microcitylibrary.html#marker4" style="background-image: url(resources/library_1.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fl">
+    <a style="background-image: url(resources/library_1.jpg); cursor: default;" class="link w-100 w-50-ns dt hide-child cover bg-center fl">
       <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">Model as a Representation</h1>
@@ -127,7 +127,7 @@
       </span>
     </a>
 
-    <a name="marker5" href="microcitylibrary.html#marker5" style="background-image: url(resources/library_4.jpg)"; class="link w-100 w-50-ns dt hide-child cover bg-center fn">
+    <a style="background-image: url(resources/library_4.jpg); cursor: default;" class="link w-100 w-50-ns dt hide-child cover bg-center fn">
       <span class="white dtc v-mid w-100 h-100 child bg-black-50 pa5 sans-serif">
         <article class="center mw5 mw6-ns hidden ba mv4">
           <h1 class="f4 bg-near-black white mv0 pv2 ph3">Sectional Model</h1>
@@ -140,44 +140,11 @@
       </span>
     </a>
 
-<!--     <main class="cf w-100">
-
-      <div class="fl w-100 w-50-ns">
-        <div class="aspect-ratio aspect-ratio--6x4">
-          <img style="background-image:url(resources/library_1.jpg);"
-          class="db bg-center cover aspect-ratio--object" />
-        </div>
-      </div>
-
-      <div class="fl w-100 w-50-ns">
-        <div class="aspect-ratio aspect-ratio--6x4">
-          <img style="background-image:url(resources/library_3.jpg);"
-          class="db bg-center cover aspect-ratio--object" />
-        </div>
-      </div>
-
-      <div class="fl w-100 w-50-ns">
-        <div class="aspect-ratio aspect-ratio--6x4">
-          <img style="background-image:url(resources/library_2.jpg);"
-          class="db bg-center cover aspect-ratio--object" />
-        </div>
-      </div>
-
-      <div class="fl w-100 w-50-ns">
-        <div class="aspect-ratio aspect-ratio--6x4">
-          <img style="background-image:url(resources/library_4.jpg);"
-          class="db bg-center cover aspect-ratio--object" />
-        </div>
-      </div>
-
-    </main> -->
-
     <img src="resources/library_axo.jpg" class="w-100 pt3 pb3" />
 
   </div>
 
-  <footer class="pv4 ph3 bg-dark-gray">
-    <a name="contact"></a>
+  <footer class="pv4 ph3 bg-dark-gray" id="contact">
     
     <div class="mw8 center tr">
       <a class="link silver hover-orange dib h2 w2 mr3" href="MAILTO:varun.mathew.95@gmail.com" title="Email">
