--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
 <head>
 
   <title>VMathew Portfolio</title>
-  <meta name="description" content="Varun Mathew's Portfolio. BDes(Arch) BCII, UTS.">
+  <meta name="description" content="Varun Mathew BDes(Arch), BCII">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="tachyons.css">
@@ -36,43 +36,50 @@
         <a class="db center mw5 link dim" href="microcitylibrary.html">
           <img class="db center" src="resources/library_thumbnail.jpg" alt="" />
         </a>
-        <p class="sans-serif f6 fw7 tc tracked">ARCHITECTURE: LIBRARY</p>
+        <p class="sans-serif f6 fw7 tc tracked">LIBRARY</p>
       </div>
 
       <div class="fl w-100 w-third-ns pa2">
         <a class="db center mw5 link dim" href="exchange.html">
           <img class="db center" src="resources/exchange_thumbnail.jpg" alt="" />
         </a>
-        <p class="sans-serif f6 fw7 tc tracked">ARCHITECTURE: EXCHANGE</p>
+        <p class="sans-serif f6 fw7 tc tracked">EXCHANGE</p>
       </div>
+
+<!--       <div class="fl w-100 w-third-ns pa2">
+        <a class="db center mw5 link dim" href="boathouse.html">
+          <img class="db center" src="resources/square.png" alt="" />
+        </a>
+        <p class="sans-serif f6 fw7 tc tracked">BOAT HOUSE</p>
+      </div> -->
 
       <div class="fl w-100 w-third-ns pa2">
         <a class="db center mw5 link dim" href="arteryschool.html">
           <img class="db center" src="resources/school_thumbnail.jpg" alt="" />
         </a>
-        <p class="sans-serif f6 fw7 tc tracked">ARCHITECTURE: ARTS HIGH SCHOOL</p>
+        <p class="sans-serif f6 fw7 tc tracked">ARTS HIGH SCHOOL</p>
       </div>
 
       <div class="fl w-100 w-third-ns pa2">
         <a class="db center mw5 link dim" href="finwit.html">
           <img class="db center" src="resources/finwit_thumbnail.jpg" alt="" />
         </a>
-        <p class="sans-serif f6 fw7 tc tracked">CAPSTONE: CHOICE INDUSTRY PROJECT</p>
+        <p class="sans-serif f6 fw7 tc tracked">FINWIT</p>
       </div>
 
       <div class="fl w-100 w-third-ns pa2">
         <a class="db center mw5 link dim" href="ftdiplatform.html">
           <img class="db center" src="resources/ftdi_thumbnail.jpg" alt="" />
         </a>
-        <p class="sans-serif f6 fw7 tc tracked">CAPSTONE: FTDI PLATFORM</p>
+        <p class="sans-serif f6 fw7 tc tracked">FTDI PLATFORM</p>
       </div>
 
-      <div class="fl w-100 w-third-ns pa2">
-        <a class="db center mw5 link dim" href="legacy.html">
-          <img class="db center" src="resources/legacy_thumbnail.png" alt="" />
+<!--       <div class="fl w-100 w-third-ns pa2">
+        <a class="db center mw5 link dim" href="modelmaking.html">
+          <img class="db center" src="resources/square.png" alt="" />
         </a>
-        <p class="sans-serif f6 fw7 tc tracked">LEGACY: WEB PORTFOLIO ELECTIVE</p>
-      </div>
+        <p class="sans-serif f6 fw7 tc tracked">MODEL MAKING</p>
+      </div> -->
 
       <div class="fl w-100 w-third-ns pa2">
         <a class="db center mw5 link dim" href="errant.html">
@@ -81,12 +88,18 @@
         <p class="sans-serif f6 fw7 tc tracked">USER INTERFACE & ART DESIGN</p>
       </div>
 
+      <div class="fl w-100 w-third-ns pa2">
+        <a class="db center mw5 link dim" href="legacy.html">
+          <img class="db center" src="resources/legacy_thumbnail.png" alt="" />
+        </a>
+        <p class="sans-serif f6 fw7 tc tracked">WEB PORTFOLIO ELECTIVE</p>
+      </div>
+
     </div>
 
   </div>
 
-  <footer class="pv4 ph3 bg-dark-gray">
-    <a name="contact"></a>
+  <footer class="pv4 ph3 bg-dark-gray" id="contact">
 
     <div class="mw8 center tr">
       <a class="link silver hover-orange dib h2 w2 mr3" href="MAILTO:varun.mathew.95@gmail.com" title="Email">
