--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 
   <title>VMathew</title>
-  <meta name="description" content="Varun Mathew's Portfolio. BDes(Arch) BCII, UTS.">
+  <meta name="description" content="Varun Mathew BDes(Arch), BCII">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="tachyons.css">
@@ -33,7 +33,7 @@
     <div class="w-90 center cf">
 
       <div class="fl w-100 w-third-m w-third-l pa2 db center">
-        <img class="mw4 mw4-ns mw5-l db center br-100" src="resources/profilepic.jpg" alt="Profile Picture" />
+        <img class="w-80 mw4-ns mw5-l db center" src="resources/profilepic.jpg" alt="Profile Picture" />
       </div>
 
       <div class="fl w-100 w-two-thirds-ns">
@@ -41,13 +41,13 @@
         <a name="about"></a>
 
         <h1 class="f2 lh-title fw7 mt0 pt3 pl2 bt bw2 b--orange sans-serif">
-          Hi, I'm Varun!
+          Varun Mathew <div class="f5 inline-flex">BDes(Arch), BCII</div>
         </h1>
-        <h2 class="f3 mid-gray lh-title pl2 sans-serif">
-          Architectural Designer &#8226 Model Maker &#8226 Transdisciplinary Innovator
+        <h2 class="f4 dark-gray lh-title pl2 sans-serif">
+          Designer <div class="orange inline-flex">&#8226</div> Fabricator <div class="orange inline-flex">&#8226</div> Innovator
         </h2>
 
-        <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">I completed a Bachelor of Design in Architecture and Bachelor of Creative Intelligence and Innovation at the University of Technology, Sydney. I have experience using laser cutters, CNC machines, woodworking machinery, 3D modelling software, and the Adobe Creative Suite. I have begun to learn front-end design which led to me building this portfolio.</p>
+        <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">I completed a Bachelor of Design in Architecture and Bachelor of Creative Intelligence and Innovation at the University of Technology Sydney. I have experience using laser cutters, CNC machines, woodworking machinery, 3D modelling software, and the Adobe Creative Suite. I have begun to learn front-end design which led to me building this portfolio.</p>
 
         <p class="pa2 sans-serif f5 measure-narrow measure-ns measure-wide-l lh-copy">To me, being an architect is not simply about your ability to design buildings. It's about having an acute spatial awareness, being able to visualise in three-dimensions and to choreograph human movement through physical structures and space. It's about understanding who we are designing for, how things will be used, and most importantly, why.</p>    
 
@@ -55,7 +55,7 @@
 
     </div>
 
-    <div class="w-90 center pb4">
+    <!-- <div class="w-90 center pb4">
       <article class="w-90 center sans-serif">
         <h3 class="f4 ttu tracked lh-title bl bw1 b--orange pl2">What I Can Do</h3>
 
@@ -140,12 +140,11 @@
 
         </div>
       </article>
-    </div>
+    </div> -->
 
   </div>
 
-  <footer class="pv4 ph3 bg-dark-gray">
-    <a name="contact"></a>
+  <footer class="pv4 ph3 bg-dark-gray" id="contact">
 
     <div class="mw8 center tr">
       <a class="link silver hover-orange dib h2 w2 mr3" href="MAILTO:varun.mathew.95@gmail.com" title="Email">
