--- a/finwit.html
+++ b/finwit.html
@@ -4,7 +4,7 @@
 <head>
 
   <title>FinWit</title>
-  <meta name="description" content="Varun Mathew's Portfolio. BDes(Arch) BCII, UTS.">
+  <meta name="description" content="Varun Mathew BDes(Arch), BCII">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" href="styles.css">
@@ -74,8 +74,7 @@
 
   </div>
 
-  <footer class="pv4 ph3 bg-dark-gray">
-    <a name="contact"></a>
+  <footer class="pv4 ph3 bg-dark-gray" id="contact">
 
     <div class="mw8 center tr">
       <a class="link silver hover-orange dib h2 w2 mr3" href="MAILTO:varun.mathew.95@gmail.com" title="Email">
